# Maurice_Drone

./: .gitignore  CMakeLists.txt  pico_sdk_import.cmake
KICAD_libraries/Barometer/: BMP180_Custom.kicad_mod  BMP180_Custom_Library.kicad_sym
KICAD_libraries/LM324/LM324ANSRG4/: part_info.txt
KICAD_libraries/LORA/: LoRa_Module_Custom.kicad_mod  LoRa_Module_Custom_Library .kicad_sym
KICAD_libraries/MOSFET/: IRLB8721_Custom.kicad_mod  IRLB8721_Custom_Library.kicad_sym
KICAD_libraries/MOSFET/Transistor_drone.pretty/: IRLB8721.kicad_mod
KICAD_libraries/Optocoupler/4N35/: part_info.txt
KICAD_libraries/RaspBerry_Pi_Pico_H/: MODULE_SC0917.kicad_mod  Rasp_Berry_Pi_Pico.bak  Rasp_Berry_Pi_Pico.kicad_sym  SC0917.kicad_sym
KICAD_libraries/RaspBerry_Pi_Pico_H/Rasp_Berry_Pi_Pico.pretty/: MODULE_SC0917.kicad_mod
KICAD_libraries/TFT_DISPLAY/: 2478.kicad_sym  ADAFRUIT_2478.kicad_mod  Tft_display.bak  Tft_display.kicad_sym
KICAD_libraries/TFT_DISPLAY/Tft_display.pretty/: ADAFRUIT_2478.kicad_mod
Motors/: motors.c  motors.h
PCB/Transmitter/: Transistor_drone.bak  Transistor_drone.kicad_sym  Transmitter.kicad_pcb  Transmitter.kicad_prl  Transmitter.kicad_pro  Transmitter.kicad_sch  fp-info-cache
Pico_to_Pico_direct/: pico_to_pico_direct.c  pico_to_pico_direct.h
Transmitter/: transmitter.c  transmitter.h
barometer/: barometer.c  barometer.h
drone/: MAURICE_DRONE.code-workspace  main.c
global/: global.c  global.h  maurice_drone_io.c  maurice_drone_io.h  timer.c
imu/: MadgwickAHRS.c  MadgwickAHRS.h  imu.c  imu.h
joysticks/: joystick.c  joystick.h
lcd/: SPIPIO.pio  Touchscreen.h  calculation_fsm.h  calculator.c  glcdfont.c  tftmaster.c  tftmaster.h  touchscreen.c  ts_lcd.c
lcd_16x2/: lcd_16x2.c  lcd_16x2.h  lcd_16x2_execute.c  lcd_16x2_execute.h
receiver/: receiver.c  receiver.h
(+88 files in other folders)
